--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           }
           context.closePath();
           // create the fill
-          context.fillStyle = '#2cc0de';
+          context.fillStyle = '#e34ee6';
           context.fill();
           // create the image
           var image = new Image();
@@ -407,14 +407,14 @@
         height:100%;
         font-size: 31px;
         font-style: italic;
-        display: flex;
+        display: flex;  
         align-items: center;
         justify-content: center;
         margin-bottom: 5px;
         text-align: center;"
     
     >
-  
+    💝Phương
 
     </div>
     
